Added cli stuff

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "get some Uncle Iroh wisdom any time anywhere",
   "main": "index.js",
+  "bin": {
+    "iroh-says": "./cli.js"
+  },
   "scripts": {
-    "start": "node index.js",
-    "test": "test.js"
+    "test": "node test.js"
   },
   "author": "Alina Phang",
   "license": "ISC"
